Add Design Jutsu Command Center dashboard

--- a/index.html
+++ b/index.html
@@ -425,6 +425,12 @@
             activityLog: [
                 {
                     time: new Date().toISOString(),
+                    action: "Resource automation configured — MWF 10am schedule",
+                    channel: "—",
+                    status: "success"
+                },
+                {
+                    time: new Date(Date.now() - 60000).toISOString(),
                     action: "Dashboard deployed — Design Jutsu Command Center is live",
                     channel: "—",
                     status: "success"
