Add Design Jutsu Command Center dashboard

--- a/index.html
+++ b/index.html
@@ -727,6 +727,15 @@
             botStatus: "idle",
             contentQueue: [
                 {
+                    id: 2,
+                    type: "resource",
+                    title: "Figma to Code — Design-to-Dev Magic",
+                    channel: "Resources",
+                    status: "draft",
+                    date: "2026-02-10",
+                    preview: "🔧 Figma to Code\n📂 Type: Developer Tool\n💰 Pricing: Free with premium features\n💻 Platform: Figma plugin\n\nWhat it does: Auto-generates clean, production-ready code from your Figma designs. Supports React, Vue, Tailwind, and vanilla CSS. Saves hours on front-end handoff.\n\nBest for:\n→ Speeding up design-to-dev workflow\n→ Reducing back-and-forth on implementation\n\n🔗 https://www.figma.com/plugins/Figma%20to%20Code"
+                },
+                {
                     id: 1,
                     type: "resource",
                     title: "Penpot — Open Source Design Tool",
@@ -783,20 +792,41 @@
             activityLog: [
                 {
                     time: new Date().toISOString(),
+                    action: "Roshi posted to General Chat",
+                    channel: "General Chat",
+                    status: "success",
+                    details: "Just noticed more apps ditching skip buttons on onboarding. Turns out friction ≠ commitment. People just leave. What's your approach — frictionless or earn the time? 🤔"
+                },
+                {
+                    time: new Date(Date.now() - 5000).toISOString(),
+                    action: "Roshi Resources draft generated: Figma to Code",
+                    channel: "Resources",
+                    status: "success",
+                    details: "Monday Resource: Auto-generates clean code from Figma designs. Awaiting approval for posting."
+                },
+                {
+                    time: new Date(Date.now() - 60000).toISOString(),
+                    action: "Roshi daily engagement batch run (Monday)",
+                    channel: "—",
+                    status: "success",
+                    details: "Generated 2 posts: 1 Resources draft (approval pipeline) + 1 General Chat auto-post."
+                },
+                {
+                    time: new Date(Date.now() - 150000).toISOString(),
                     action: "Resource draft generated: Penpot — Open Source Design Tool",
                     channel: "—",
                     status: "success",
                     details: "Generated draft for Penpot design tool. Awaiting approval."
                 },
                 {
-                    time: new Date(Date.now() - 10000).toISOString(),
+                    time: new Date(Date.now() - 200000).toISOString(),
                     action: "Resource automation configured — MWF 10am schedule",
                     channel: "—",
                     status: "success",
                     details: "Scheduled automated resource posting for Monday, Wednesday, Friday at 10:00 UTC."
                 },
                 {
-                    time: new Date(Date.now() - 70000).toISOString(),
+                    time: new Date(Date.now() - 260000).toISOString(),
                     action: "Dashboard deployed — Design Jutsu Command Center is live",
                     channel: "—",
                     status: "success",
